# ansql

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  EDITIONS.md  LICENSE  README.md  TODO.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: 2026_01_30_add_row_feature.md  2026_01_31_excel_like_selection.md  2026_02_01_1900_mysql_timestamp_fix.md  README.md  navicat-gap-analysis.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection_commands.rs  credential_commands.rs  export_commands.rs  favorites_commands.rs  group_commands.rs  history_commands.rs  journal_commands.rs  mod.rs  query_commands.rs  session_commands.rs  transfer_commands.rs  vault_commands.rs
src-tauri/src/crypto/: vault.rs
src-tauri/src/db/: bind.rs  driver.rs  factory.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/storage/: database.rs  migrations.rs  mod.rs  models.rs  repository.rs
src-tauri/src/storage/sql/: 001_initial.sql  002_action_journal.sql
src-tauri/src/transfer/: ddl.rs  dialect.rs  engine.rs  mod.rs  plan.rs  rows.rs  type_map.rs
src/hooks/: useActionJournal.ts  useAiConfig.ts  useAppState.ts  useConnections.ts  useDashboards.ts  useErd.ts  useErdLayout.ts  useExport.ts  useFavorites.ts  useGridLayout.ts  useGroups.ts  useHistory.ts  useImport.ts  usePaste.test.ts  usePaste.ts  useQueries.ts  useSchemaSnapshot.ts  useSessions.ts  useSettings.ts  useSnippets.ts  useTheme.ts  useTransfer.ts  useWorkspaceTabs.ts
src/i18n/: index.ts
src/lib/: aiPrompts.test.ts  aiPrompts.ts  aiProviders.test.ts  aiProviders.ts  alterBuilder.test.ts  alterBuilder.ts  chartData.test.ts  chartData.ts  clipboardStore.test.ts  dataDiff.ts  (+84 more)
(+211 files in other folders)
